# raul-seixas-gita

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
gita/: __init__.py  elementos.py  eu.py  excecoes.py  familia.py  paradoxos.py  tempo.py  voce.py
tests/: test_gita.py
